Fixes: display empty common area